--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
   <!--begin::Loading markup-->
   <div id="splash-screen" class="splash-screen">
-    <img src="media/logos/tetlogo.png" class="dark-logo" alt="TET HOMES REAL STATE" />
+    <img src="media/logos/talk.png" class="dark-logo" alt="TET HOMES REAL STATE" />
     <img src="media/logos/tetlogo.png" class="light-logo" alt="TET HOMES REAL STATE" />
     <div class="loader-wrapper">
       <span class="loader"></span>
-      <span class="loading-text">Loading...</span>
+      <span class="loading-text">Govind Loading...</span>
     </div>
   </div>
   <!--end::Loading markup-->
