--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <img src="media/logos/tetlogo.png" class="light-logo" alt="TET HOMES REAL STATE" />
     <div class="loader-wrapper">
       <span class="loader"></span>
-      <span class="loading-text">Govind Loading...</span>
+      <span class="loading-text">Loading...</span>
     </div>
   </div>
   <!--end::Loading markup-->
